# IUStudyGuide

./: .gitignore  README.md
data/: knowledge_graph.json
data/kg/: knowledge_graph.json
stage1/: Makefile  README.md  requirements.txt
stage1/app/: __init__.py  api.py  config.py  inference.py  logger.py  prompts.py
stage1/cli/: ask.py
stage1/eval/: cli_history.jsonl  outputs_20251022T024322Z.jsonl  prompts.jsonl  run_eval.py  sample_prompts.jsonl
stage1/tests/: test_api.py  test_inference.py
stage2_rag/: README.md  config.yaml  pyproject.toml  requirements.txt
stage2_rag/app/: llm.py  prompt_templates.py  rag_pipeline.py  web.py
stage2_rag/app/ingest/: build_index.py  loaders.py  preprocess.py
stage2_rag/app/llm/: gemini_backend.py
stage2_rag/app/prompts/: stage2_answer_prompt.txt
stage2_rag/app/retriever/: alias_normalizer.py  bm25.py  chunker.py  embedder.py  hybrid.py  utils_text.py
stage2_rag/eval/: answers_1.jsonl  run.py
stage2_rag/storage/: aliases.json  bm25.pkl  chunks.jsonl  faiss.index  faiss.npy
stage3_rag_kg/: README.md
stage3_ragkg/: config.yaml  pyproject.toml
stage3_ragkg/app/: guardrails.py  llm.py  logging_utils.py  planner.py  router.py  slow_curriculum_ilp.py  streamlit_app.py
stage3_ragkg/app/kg/: loader.py  reasoning.py
stage3_ragkg/app/prompts/: answer_synth_prompt.txt  planner_prompt.txt  queries_prompt.txt  router_prompt.txt  slow_planning_synth_prompt.txt
stage3_ragkg/app/rag/: alias_normalizer.py  bm25.py  chunker.py  embedder.py  hybrid.py  indexing.py  utils_text.py
