[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stage3_ragkg"
version = "0.1.0"
description = "Stage 3 — RAG + minimal KG with Streamlit UI and Batch Evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # UI / App
  "streamlit==1.36.0",
  "blinker>=1.6.2",
  "watchdog>=4.0.0",

  # Core utils
  "pydantic==2.7.4",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "pyyaml==6.0.1",
  "tqdm==4.66.4",
  "markdown==3.6",
  "beautifulsoup4==4.12.3",
  "packaging>=24.0,<25",
  "typing-extensions>=4.10.0",
  "requests>=2.32.3",
  "python-dotenv>=1.2.1",

  # RAG: sparse + dense
  "rank-bm25==0.2.2",
  "sentence-transformers==2.6.1",
  "transformers==4.41.2",
  "tokenizers<0.20",
  "huggingface-hub<0.24",
  "torch==2.3.1",

  # Vector DB (Qdrant)
  "qdrant-client==1.9.1",
  "faiss-cpu>=1.8.0.post1",

  # Text loading / matching
  "pypdf==4.2.0",
  "rapidfuzz==3.9.3",

  # Graph viz (optional but already in your project)
  "pyvis>=0.3.2",

  # LLM clients
  "openai==1.43.0",
  "google-generativeai>=0.8.0",

  # Google / protobuf stack
  "protobuf==4.25.3",
  "googleapis-common-protos>=1.63.0",
  "google-auth>=2.29.0",
  "google-api-core>=2.19.0",

  # HTTP stack for OpenAI / httpx
  "httpx>=0.28.1,<0.29",
  "httpcore==1.*",
  "anyio<5,>=3.5.0",
  "distro<2,>=1.7.0",
  "jiter<1,>=0.4.0",
  "sniffio",

  # Streamlit runtime requirements
  "altair<6,>=4.0",
  "gitpython!=3.1.19,<4,>=3.0.7",
  "pillow<11,>=7.1.0",
  "pyarrow>=7.0",
  "pydeck<1,>=0.8.0b4",
  "rich<14,>=10.14.0",
  "tenacity<9,>=8.1.0",
  "toml<2,>=0.10.1",
  "tornado<7,>=6.0.3",

  # Qdrant extras
  "grpcio-tools>=1.41.0",
  "portalocker<3.0.0,>=2.7.0",

  # Cache tools
  "cachetools>=5.3,<6",

  # ILP / CP solver
  "ortools>=9.8.0",
  "pytest==9.0.1"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP","B","SIM"]
ignore = ["E501"]

[tool.setuptools]
packages = ["app"]
